--- a/.env
+++ b/.env
@@ -1,3 +1,13 @@
+# Path for your CSV file
 INPUT_PATH='/Users/o4ckaevyandex.ru/Downloads/ЗАЛИВАЕМ-Tаблица 2.csv'
-OUTPUT_PATH='../result.txt'
-API_URL=https://
+
+# Path for result file
+OUTPUT_PATH='../curls.txt'
+API_URL='https://somehost/bff/orders/request-registry/v1/request'
+
+# Headers
+LDAP='qwe'
+EMAIL='qwe'
+BU_ID='qwe'
+LOC_ID='qwe'
+ROLE='super_admin'
