draft 8 added test and change key for grouping records

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Path for your CSV file
-INPUT_PATH='/Users/o4ckaevyandex.ru/Downloads/ЗАЛИВАЕМ-Tаблица 2.csv'
+INPUT_PATH='/Users/o4ckaevyandex.ru/Downloads/тест на группировку по ключу.csv'
 
 # Path for result file
 OUTPUT_PATH='../curls.txt'
