draft small fix

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Path for your CSV file
-INPUT_PATH='/Users/o4ckaevyandex.ru/Downloads/тест на группировку по ключу.csv'
+INPUT_PATH='/Users/o4ckaevyandex.ru/Downloads/Миграция xdock.csv'
 
 # Path for result file
-OUTPUT_PATH='../curls.txt'
+OUTPUT_PATH='/Users/o4ckaevyandex.ru/Downloads/curls.txt'
 API_URL='https://somehost/bff/orders/request-registry/v1/request'
 
 # Headers
